2003-12-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.applications:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: application/x-flac is now audio/x-flac,
	image/svg is now image/svg+xml (Closes: #127667, #86748)

2003-12-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: better heuristics to detect RIFF CDXA video
	types (Closes: #129780)

2003-12-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: matching on "<title" brings too many false
	positive (HTML vs. XML) (Closes: #111234)

2003-12-09  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in:
	* gnome-vfs.mime: run check-mime.pl, run check-mime.pl,
	whip self, whip self, add bittorrent mime-type

2003-12-09  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: add DjVu support as image/x.djvu

2003-12-02  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: add support for application/x-gchempaint and
	application/x-gcrystal (Closes: #126293)

2003-12-01  Bastien Nocera  <hadess@hadess.net>

	* man/Makefile.am: don't install the man page, it's outdated

2003-12-01  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.mime: make .cpio.gz have precendence over .gz
	(Closes: #126470)

2003-12-01  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: use Documents/TeX for TeX files, and
	Documents/Published Materials for DVI files (Closes: #119894)

2003-12-01  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.applications: use "gimp-remote" in place of "gimp"
	to allow the use of an existing instance (Closes: #99272)

2003-12-01  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.applications:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: add Objective-C support (patch from PUYDT Julien
	<julien.puydt@laposte.net>) (Closes: #126473)

2003-12-01  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: